--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="container">
       <!-- Успешный алерт -->
-      <div id="success-alert" class="alert alert-success alert-dismissible out" role="alert">
-        <h2>успех</h2>
+      <div id="alert" class="alert alert-success alert-dismissible out text-center" role="alert">
+        <h2></h2>
       </div>
 
       <!-- Таблица -->
